[package]
name = "noot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio       = { version = "1" , features = ["full"] }
reqwest     = "0.11.8"
async-trait = "0.1.52"
flate2 = "1.0.22"
tar = "0.4.38"
fs_extra = "1.2.0"
regex = "1"
